// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#gremlins/gremlins/radio <Gremlin /> With additional props Checked is a boolean matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <RadioField>
    <input
      accessKey="MOCK ACCESS KEY"
      checked={true}
      className="MOCK CLASSNAME"
      disabled={true}
      id="MOCK ID"
      name="MOCK NAME"
      onChange={[Function]}
      onClick={[Function]}
      readOnly={true}
      required={true}
      tabIndex={1}
      type="radio"
      value="MOCK VALUE"
    />
    <label
      htmlFor="MOCK ID"
    >
      ​
    </label>
  </RadioField>
</div>
`;

exports[`#gremlins/gremlins/radio <Gremlin /> With additional props Default checked is a boolean matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <RadioField>
    <input
      accessKey="MOCK ACCESS KEY"
      className="MOCK CLASSNAME"
      defaultChecked={true}
      disabled={true}
      id="MOCK ID"
      name="MOCK NAME"
      onChange={[Function]}
      onClick={[Function]}
      readOnly={true}
      required={true}
      tabIndex={1}
      type="radio"
      value="MOCK VALUE"
    />
    <label
      htmlFor="MOCK ID"
    >
      ​
    </label>
  </RadioField>
</div>
`;

exports[`#gremlins/gremlins/radio <Gremlin /> With required props matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <RadioField>
    <input
      className="MOCK CLASSNAME"
      disabled={false}
      id="MOCK ID"
      name="MOCK NAME"
      onChange={[Function]}
      onClick={[Function]}
      readOnly={false}
      required={false}
      type="radio"
      value="MOCK VALUE"
    />
    <label
      htmlFor="MOCK ID"
    >
      ​
    </label>
  </RadioField>
</div>
`;
